Fix Bug 312276 - removing (deleting) an attachment loses the email contents as well for some mails

FIXED-IN: 4.14.6

BUG: 312276
BUG: 333150

It needs kdepim too